# zotero-comfort

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.secrets.yml  docker-compose.yml  docker-entrypoint.sh  http_server.py  pyproject.toml
.beads/: issues.jsonl
.claude/skills/ceir-publication-sync/: SKILL.md
.claude/skills/ceir-publication-sync/references/: filtering.md  roster.md
.github/: GITHUB_SECRETS.md
.github/workflows/: build-docker.yml  docker.yml  integration-test.yml  publish.yml  test.yml
notes/: 2014.md  2017.md  2018.md  2019.md  2020.md  2021.md  2022.md  2023.md  2024.md  2025.md
src/zotero_comfort/: __init__.py  client.py  proxy.py  server.py  workflows.py  workflows_external.py
src/zotero_comfort/paper_reader/: __init__.py  download.py  local_connector.py  utils.py
tests/: __init__.py  test_dual_library.py  test_external_arxiv.py  test_external_pubmed.py  test_proxy.py  test_workflows.py
