[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-comfort"
version = "0.1.0"
description = "Comfort layer for Zotero MCP integration with high-level research workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "BIH-CEI", email = "cei@bih-charite.de" }
]
keywords = ["zotero", "mcp", "research", "bibliography", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "biopython>=1.84",      # PubMed via NCBI Entrez
    "arxiv>=2.1.0",         # arXiv API client
    "xmltodict>=0.13.0",    # XML parsing for API responses
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
zotero-comfort = "zotero_comfort.server:main"

[project.urls]
Homepage = "https://github.com/BIH-CEI/zotero-comfort"
Repository = "https://github.com/BIH-CEI/zotero-comfort"
Issues = "https://github.com/BIH-CEI/zotero-comfort/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_comfort"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
